testcases/pos/batch/lambda_calling.bard
((n: Int) => n + 1)(2)