testcases/neg/type/calling_wrong_arg_type.bard
((n: Int) => n + 1)("Hello World!")
